--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:4H4oCBxY,iv:VkjKg8FVkGn2ouBVsaU/63IEyZ+5Yx7MN5urHzTC7E4=,tag:woCz3kMZsnxHV38oymxHpQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:4v93deod,iv:/fyGpIwQ00yd4CSGd54sTQqbkpPLrwptjBZv0pFec4U=,tag:qN+DLw9iF0StVvpkF4Tuzw==,type:str]
+kind: ENC[AES256_GCM,data:htx1GLOx,iv:Uyqu0StFgiuuftPAlzrEB6f/HCqoBf9GwxVgVcB6uPI=,tag:vBO1AdFZ/Xs4WS4LBZRWqg==,type:str]
+ansible_user: ENC[AES256_GCM,data:1T0j1eLS,iv:HvrE0x5kZ1ESQSNzK1StOYBqyhVWmIZqJt15oyhYe0E=,tag:rijK4H20NXNIm17LD/te+Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwWmozTkNraHZjSDAyVmxJ
-            bDFzRkhmanl0SFZMSTJ1Yk1oeTFiMmFqZVgwCjdoQXplUG1zdmFmdkFKbUhvdktT
-            YjNuRXR5ZmhScnhTaHFJSEJXallTYmcKLS0tIDRtcG1ub3JCWnNBaTdsUjQ1bXdP
-            ZmY0S3JhVEJTVjRKYjVjL2hXTlJnSXMKowx1DR3BQNq3kIBwtN9Zll7o3FB8YQN5
-            ACKQSJ9teT80aufhMg+0j48WnwFhIEqZV0HEahKaz7zxDfh/JgRmZA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYTS8xTE1KckM2RFQrZGJo
+            SW1MMjgzeVpoQ2did2NTUFFuVmVKeDlvQUJvCk83QTN1MmFTNjVXU1diQzN1T1lQ
+            Y3JDQW84a1c0anpmUVczUkNRN1ZpOVkKLS0tIDhBdnlmU1BJN2xXK04rdDBqZ3Fp
+            NFhUL2taMTc4aDd1UWRwVHZTSUVQaFkK0LhJffC6hS1oYIQ/jk79lzENjj7FrNb3
+            N+IF/XJiJPkq++4d+lDJlbbWi4z1As3ByPNj5/tAYIulhl4E7pxCkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:tQiemAN5QHF8Kmygah6K6nxB0HP4ywq4C7J+4L7dvRoibC+Nogow0NSWyJB1giQqdyzfPj7BGX7Lx0wEjTxL3m+zOyqiHIfFQwz1lW37lptBaV2Q7lJn5X1E7+VPeRfaFZVtgIpeGa3WhM5ufXoHRMQTJqs4vzvIDtpXr9sP8cs=,iv:y4zAI+iOwKnLlb8NX+s5TSAV3tvcZV603aBwcG0OgAE=,tag:gz1Rx8b+NF6cwq3H5prJHQ==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:KYTLCnxmFLvJtnFTfZ6Wn3Ni3ky+sdOp4rk2JFyoKAhjvVkmrSy0LmArl20rT2934gBwJqpGCQ1c1PbeEfusdKycfTaei6xua7O5VciiTV4vcCcBLonsv54hg/ZHLsjoUISDaOO+TCvppK/Km35mD8up3oDL0GuKodUAOMbTvL8=,iv:H09lxX5P/jl1rCb+PCSfJIBtLKuG36T9pa7UdVPOfuc=,tag:h6P5LF6ggvQifjhIb/523g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
