--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ohJD7jTg,iv:Bt51OynNxTMLaXHRov3bEXrvChtVEU7fSnklG4OCq08=,tag:RplCNDtmfFTPFeOdWO32og==,type:str]
-ansible_user: ENC[AES256_GCM,data:O+O2SAzA,iv:7C7gx5mHA4bMmqImZKOWR3VSHzwLT8M16jMjTajnSho=,tag:4+e/iweaNkUA9fo0b2RNtQ==,type:str]
+kind: ENC[AES256_GCM,data:yWfzp2St,iv:zeofPBsWw/Y6z+oELuZUiAUqYvi5dZzhzq+HH4MEhU8=,tag:rAh1GG+1ochvxZLUKbwrQg==,type:str]
+ansible_user: ENC[AES256_GCM,data:2WiOW2kC,iv:fNGiPX6qIM/8D+fyGYZwn+5zUezBUxQJIPABnYH0yms=,tag:qxYzxX08x/XMz0ImYx80+g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBndEd3ZVQzc1N3cVF3b0Jj
-            Snpad1pwYVBGQTZYQ3ZsZlJ2RDVRVXFhL2lzCmc2R0JZYURNNDNCaVN0ZlR4ZkRU
-            NENNN1ZQMWhkUUg0N1NjVy9JSFEwSzgKLS0tIG9uS3YrNkN2cXFiTTQ2VzFzYVpO
-            N0ZFTUZ6bExPeGljYTl1QndodEt0NHcKrXwkjp9GzkRz7WsjBBU6eJ/aIs6cDAr5
-            MONqPqYTD0IwrcCnzubtEuRBwA0KLi6BXFpACYeV2xNJvzNAnvCYGA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxTFZSaG02YWtOS2hJZVNm
+            cHZvTmFBb0pOVENLNTRtVVMvV2JWMmF6aUhFCi9nQVVrZ2kxVFNkejhmbklKd1F5
+            TGNTYXA3M2kzVTk0dllGUlUveVI0U3cKLS0tIFQrRmFWSEIxTjBFcllTYUtoSHMv
+            d1gxKy9nenJkUWNwY05jYjE0anlhOE0K44qSGhS/ZtXkTvQwq1oRU8UVCbBlQrBq
+            Jw+fmzVbR++AXbXrnKH7P7Mhlw4wCOUmjbi6oTVtF09/Bl60p+zv/A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:XAILX5Esy2Rv8+UH6hwfE0RbaJNvIdBIJSSb54oibiiIpiasMvuZGqw9uWtOtSPbMFEZy3ler6umlQ11xePkz3S21ehygPgHyNeCV1V8DW2Dyq2REeIev5c243otPCRtJLK7soWAAEiMZ/miKVqoY2ZEZvY4roMY4lJpauHp1Lo=,iv:hcMnafsmYEtASUXTbJDNqOdOuCROWTw7Nb1Q7mSWHUo=,tag:MeHNhjEhLlSOJfoB8S0NgQ==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:89B70PcRD+UtMTubfpzQceJRHCdrAXgFuxVk0m9Ckn7kXECPNY3jRk3bSqiUVxgwCH5e1lHpXYW7uZuD5eWEEjGnUasmTB9gols2Ltxo8o3QJ0yoOYTzHm06XJeDQtLwBW85SUM5CJkgCDjWjEvBRqaGJHgrlqA+MCMiMhalcuI=,iv:QzN9HZTt/lsL4jMCn2ljVOO51JevbDRaJitvbl87f+A=,tag:WG2lmqMrstzGb3CXuUsV+g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
