--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:fLSnW/ns,iv:/+a7GBMHL3C69O8WE4SNHYsEvAXIWzJTpTUPUndPaiI=,tag:gwBUVYfO7B0f4YWBujHRIA==,type:str]
-ansible_user: ENC[AES256_GCM,data:lEhSY0j4,iv:Ia3FBvutjnviyQsNvbofhYvXy54P0/xInExnTrXUfog=,tag:lrF2UjaGoFx1nsWujFEynQ==,type:str]
+kind: ENC[AES256_GCM,data:K89xIE8/,iv:snkMwefMIo1dXO/JCeM2XbDVedpXNUV4ibnqEyj6fmo=,tag:1NQT5tdNoMSIA9op1dHZFA==,type:str]
+ansible_user: ENC[AES256_GCM,data:GG86h4SQ,iv:mmSdVixTJXyylMnY5pFiuiGi/ZT5Y6khRWzleh4bdh0=,tag:iv6/VP0ETTMb9ukK+i+gyA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2TVltcHFHYzA2cnUwTWpJ
-            ZEppYTJ6LzFGaFpXMVFOLzloT1RRMzV3RkFrCmNMa1hiTUptUDJQVUpWNWhsSlBi
-            QS82ekM2alpoYytPY0xwcnozK0V6STgKLS0tIEdVODR1aGRyRlZBYitGVE1rVElG
-            TTRuVnNjYU9ua2JZNUI1RCtkV3c2S00KTXNnU0xgOlbPHHF+jiG3HFHbgTztEWT2
-            HEeZjBUtEd5cTSNNWCHjgidubkKPcCYyfAKRk9zWeo7lVzFzgYmO9g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMcFFNUDcvd0pqSGZPVHpH
+            cGNQRmxMY3VNUHBYWlJZUXFQSnc3eE1NK2hRCm1VbjZGbUk5TEEyOWZZU21UTDA1
+            aFpuNHZpSnoxS0dwaG9iYXJvL3pycjgKLS0tIC9xRlJOaG9tdysyQjVzWDNnYVlD
+            WFE1c0oydVZrUWpYT3RadXgvRHZpdmcKd+h0/KPQcygewEP3oVHw++riuHmaSfHv
+            3KOG9e9hXtVc7bCi9VHKS3UYvMQelUV/pTYVWlqiobt6YuPEr6WvZQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:/it0ZpudirodMkUNhel8ZBnrLEwYGewbqimDkpIdOvL6zjYVKBheHs8S+1QAyYKoUQVjY2VfHo2Wbd6zrEZkB6kBLoZ6nIxFw1DWFHXVCqDp+AEaNHzkM5UWsNbBOJayQzrESXv6FOSh7rWz6hrKml7sue5LqpL+YormU5p6878=,iv:2JBUSuc3BpElgRdYePzcJ5uVxeRLb7lb0pN7o7+Cvo0=,tag:XaoNhH9fdgXbLquHAqi5qA==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:8h+wB1/Ii6wzk9SZFlYit/HFtZacWJgu4hITrPlZoQhAp3T9OxRBx1XZxiFIOJCeHs42wFsd9UUeKiexcqE411y270+uVQ5iOUeYdkKJmBnLlp+X3y7y/7Z1DIEk1jcmNFlElWn5zxg62HcufbH2b53vdqaoIVFHcv+LLa/IPrs=,iv:aCV+Vk9vpOk77CqtxUWXtFAe2Ari3Eq8REaSelomGag=,tag:Sqxs/Kn1gVCS0EaL+us0oQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
