--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:1GOo1h03,iv:OwuoS6SKCfIIOKCNKaoX91hJuarh8FtyNQoECeXefeU=,tag:gPXWMniieihyx6+tRmB/+A==,type:str]
-ansible_user: ENC[AES256_GCM,data:X/b7WZkr,iv:9lSHuPfjg4L/1XhqermHt5TQnIcqJDaWAGfE1A40Hzc=,tag:CA7zHNz/l7y4Nxq+jDGvYg==,type:str]
+kind: ENC[AES256_GCM,data:iASaNaX5,iv:IBMd9AuulBNZ4SqbxxureQY1kXXC+7CQWhkx165N/OU=,tag:uITrpOSUSosoP8RK0L5ocw==,type:str]
+ansible_user: ENC[AES256_GCM,data:F+Y34zSa,iv:UnXMMT8s5RihKXEuRGkTlp/j6HR2a7PdY6u4dBzwbyw=,tag:YWeIFNlUYXbRW7SC4AAgTg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2REZ5STc5dDZzVm5LUHRO
-            anpSbk5rZmJIZ2pTWVRLaHJFWi9RQmRKMUNzCmo1bFVleUF5WURjUlNNV2huaHF5
-            K2VjUnR1cjVabFdFODM4S0VrNm9iWjgKLS0tIDNKdEUvU1I3cWl5azZLNmhJNGU2
-            ZVplenc0cXJqRG41cVl4YnhyeVRWS0kKWI1FdLjqc1b3qK5mSCKlp+g72TRP9z+0
-            U2XYb8jWa1TGVGnxgfFEiuB8A1EuCcwfVL++mp9uVqyRUsfOdoBTBA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzRnF4Zkg4aklSTEY5UjNB
+            OFYwamJKSU5tRElsN2ZHV0dnVkZubDc2VlNFClpGVXh3ZW5vMjF3ZDRUb2ZsVTVR
+            WFdTK0JTYVBVcWE0M25YMUFUdkJlOTAKLS0tIHpwWjUzVUs3SUF4TW4zQnloSUda
+            SjQ4SExQSjhiYVh6d1RhWGQzTWg2U2cKUjio5jM/qbyf0uc4xdBW1KGlu2MjVXVv
+            uHTtNGzNr4zXe3k5uukG2nGtM8+VFsfXRn3uiDQL+ey+T2gDlVfmyA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:MX0Kp0uJbyHPfRiJhACkoOTeGLIxtv4CyqBM3UFjN74dwW5sJZcPzN8TbPqAINhc61iDWuLZDWtiH24ndG4z1tPf/GEmrCdcL+N5qaVXTYmA2SWBWPDO8SWyHA6OMi1T9tzZrHnzk5raCixjz7LoqLD/ebsO00RmzYlhN8LJUVs=,iv:D792UAAxowIV/pXVXaeH5oucm2k33gWcVLd5dbHBbwU=,tag:AwM95JVWR1fZAfHlDOpIwA==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:2ov4r0DN0AwwhvqXQgvTgDheGgvVHu+1xOL3bnG6frFM0Fpb6gS8cce3lCFWKpb8c6KQ+c0PYQ4Q8qh6/AdCVmPvzdQdCwFSJhztsJjTf0RSi25EZXIdni5Cai8rtdPmPh6ljoiGkHeDXJIRkbXz0BK5b/8AQkr73JdhAfZ1l5U=,iv:Lrz+81vHvF8PUaw1ogaJQLkvPKFoZhZx3DGGqC278Bs=,tag:hM95eoGQCIJYKC/Vpf96IA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
