--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:MNpCM5Cn,iv:wjCrsTshvyASZHpbomvGT072S/Evk813yD+fihmV/ec=,tag:ndOUXpXVGzjojpjOItHeSw==,type:str]
-ansible_user: ENC[AES256_GCM,data:OXoG1E2J,iv:aKyFg+LzgUewlgrDKaP35Jr+xTG/+2TTde/QiBSX3/I=,tag:DqCEshaxOzi4KHSfLM3ivw==,type:str]
+kind: ENC[AES256_GCM,data:aCupD0/3,iv:Y8qRQfzIzfQNEP4locGFa4Vi1cRGDAoTKrjvZXOLi34=,tag:Lp6aCBNpkEWIe0ol2xzfqA==,type:str]
+ansible_user: ENC[AES256_GCM,data:E9ndD6zx,iv:GxVOUSTNNHWLXh3IBCSvFuj9NNd7Plt7JsInZHSOEz8=,tag:p9oG8/YfCAHjMyzdRNHAuw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoZkpSaTJoQlF5SVZxTFFB
-            dngyOEc2ZkgwSWNNd1Z0bmcvRWM0UzZjcW1rCjVaSWFpd0YxQUdGc21hTVhzM3RP
-            SHl6REk1QkxsdnFqbGpYSkhwdlhWRTgKLS0tIFM4bUJRTm1QTlJLYlgxSC9LamZD
-            RUpDeW9Sd0xXTVFJSEcxWUdXYWZJNncKBQXXX5GrVKpil9uf6GUR02K2pYenRpmW
-            fZhAhITa6awYh7WtjGge+8cEUlNVHEEB6a8SsTUTqXKYhxyac5Ccog==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMUzY2Qm91SEVFVWZBV2lW
+            MUZxL01YZE9pNnhhMmpEUEpJTjRSdUtFUmljCi95SFNNVkhObU5wM0hDV0xpdmV3
+            QU1udjlmT1l2TEZlSTR3N0VJZXFrT0UKLS0tIGNTTFl3TDVpc3NWVEQrMlJEcGJh
+            ZjFjOWY5RHNZM2R4U0hMQXlpYjZlT28KwoyqvMnN7AJOuTgw9S/0gzvQoFt9SVVE
+            OUqV0wYAYNDYikixYPAqVDrBB//ppqhp2MXb2mMSEv5+LxEnEZhVSg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:41MOYFLX5FWV+Xhlxk4jNl4qPd/f0aJvMAqnYuJVlzy0l7cLRZ/+pMQbPYBeoEeK3ODkRyJlZUa1AdnJpz+/b5FjG2TB9u7O0b4/CprBF2I1VEyCCQbVhtt5jg+iNTXLlo78pyh9tsjLcsCmehBfP4rYU5Vk48S3/zu52pRm16E=,iv:W8D6ddpETM6Xv2x+FK0O0YG/mWO7JLDd2YsY1z1WNqg=,tag:MbYIZoMO7vxftU9WDFekag==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:D8yy9ewikCxga1ApEHLrHjzB3H4G1A5xW/MvsV3ta1n+l4f/1n34yDC+86/zXHmWgqetzfCcy8WD8NP6EUXtkc73BfkULldxvXzUgX9IZLpO9+Z8WsMDo3d6zc2jlvoHff4A6U5Ys0a6ejPqkwLVhYO18nKgRHdZcgceD+tCaDg=,iv:j6rhCYoKuRIQUiBf2x7OGktBoGwehZAHEJmkoG9h/2g=,tag:9lWIoQrwhuuD5MPk3FfIEg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
