--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:hhMW/jg6,iv:oNRqUwhRN3RfGiCaY8HRmEMsHWQ/WBaRm+vQ670njqI=,tag:aIVwH/AndC2GBjomJW2ONA==,type:str]
-ansible_user: ENC[AES256_GCM,data:tdQnXXMX,iv:CR4Bk3WhDXafYUtmuYGv8UEWb/LIRdL6Nwq8SNidGII=,tag:/+tYUej7Sw2hHDYMY6apyA==,type:str]
+kind: ENC[AES256_GCM,data:cGxsY21K,iv:pnjPS9kjTh7DF/g4GfVRErD1MnAJRkezayS58Ef3Hbg=,tag:TbzEb/JzxS4VuX8V2uNg/A==,type:str]
+ansible_user: ENC[AES256_GCM,data:x8cXuZ9y,iv:84dRg9nOPMOjJ77vd7OfkAaGtwuajMW4awIwIPcX5o0=,tag:xVFl33NW0MYPe+BVd2D6RA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4NnZzcFVZK3NzcCtFcVNU
-            MjA1aGFJbmxMR0RhdnBZT3Y3am4xU2h6NEJRCnNjRm5zQzNDVVZQRFR0VzZ5WG4r
-            Yy9nY1EzUHZwNmlTZFBCei9RSHIxM2MKLS0tIFdqdkM4L1p3MFJOOXhyaWZpaFly
-            SjNoZTJ1d29QOUM3VnlQNExYSU1ETzgKCiew1Ov3MvNLs+PcljFFiFsZg+BqCE/P
-            sTCCQPSyDVu4zpeESsk+NQtBJ7laFM7R0ss8kWH9RDGp8lfFQ8WG4w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoSzRxS2hmdjJ2WGVqOGJM
+            WVliazZuSFBBdElnM0Rrd3NMMkx0TDJ5V2tFClE0N1h1SWNmelAzaUxoa0NwcFRN
+            OGpyZC9XQzVjVzBTdFdadUFOT1BBWVkKLS0tIC9NaFIwL2U3b3IyNDZIaldSU3BH
+            Skt0cHZXZ2w0azhGOXFmRGlyeHNPOWcKSFdPwi2zOC5LSePTY5NF3kaqcGRspVVG
+            TjaQzU6LyWXppQEIHoZ/eWz4iUV7k8gEgO9SofxiUhc2+EGTO8Mjrw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:J9xiZIVRVYIy1YsOIKBU6wkHqBUD0mT7MQByTc6GQAgGQh0TDKYELy2ogrxHvUWVpHW8JQ8+T5N8/WB5QFhCteSHrCv1Rf2Ve8K6/qguOmO4ba1jGFrmDhewBFbv9SqjQxDRLcASDyp7sPOJHbdRfZ5jQOhMuWElaEESxzg0CPM=,iv:ENOi2KAP5e9Qxi0xkBeHTu8gxIo0fy9SQtl/G2FOF4A=,tag:SYrIdHCodStrJ3XY8RXMnQ==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:6l/IAAY7Mx3EjApZnk7QlSUfBxumZB06dtgBJYr3K77kT7V4QAJWcKvcQuGxi5sjJLwCx5EM7dPehpvTnzDETTqNrr+I8gaTm9W9zrRjDxBd+wgsMndhMwEVYVPT3usWwZTMzs/X3YaSaQeKe8WbaMdUiZ/f6Q+NKeJew33OPQ0=,iv:kQrGet/yAcQCjOBVctWRjuR6k7flgomPhsSJOd7T9fY=,tag:+tBF3sh4dLBHtYNaea2O0g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
