--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:nF8vjAhb,iv:QxP6nDBzb1Rtc7opJxeZBo9B0CL7xt9FxJ7NHpk3kvw=,tag:6B5Q8JGWFa1Y3l8sT3LVVA==,type:str]
-ansible_user: ENC[AES256_GCM,data:AxDtt35P,iv:HmjegxGQ9nMuWY/FXUh1cf0dMZQtku3oXJ/UicIs3dE=,tag:edZge9Ey/szYN9gy4wHV2A==,type:str]
+kind: ENC[AES256_GCM,data:AG+UGSdi,iv:1PoiVOvnvVUtcHQeRUBUsXAtxJOyJKCkHtei4VxzBWQ=,tag:AtI0Ph2kM0oEHCMk1MTb+w==,type:str]
+ansible_user: ENC[AES256_GCM,data:KzWQh6BX,iv:TIWQq1u6JKXNWFcc+3dBZdHwfbXbVGOPjlQ+xwtih2M=,tag:5J8UOELZtBLlI0xxk+l/2g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3RWdYRjJWWkc0aHc1dzBj
-            c2pTWW5UNVFhOEtidnlwNFNJQmJVcHU1MlFBCmN0L3VneklVeVZZOXRScjZZOWww
-            cVhRdVk0bWI3RDROamEyUEU5UWNRTzgKLS0tIDYyYXQrK09JektZVzFNQkNlcDMx
-            MmhMOG53K2hrY3RnYjZEZ1d4Q1NHSEEKz4kozdgz8bI2CJkFQPkBGNfDqAjd75zV
-            TKGprWTUwRKC66o/16cAk+GifsHKjKzSntcCyjfz2BHubg/mXM7i0A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2NkZMazhzYUx5aXpxK2lH
+            VHBRRXpINnlrdXRjUWVwSmFGUDBuM21hRXowCndRWHh6THg0eHJwWnZWY25zSTYx
+            WHY3TG9NLzlOTlNhWlV1Qnh4Y0I5RFEKLS0tIExZWUxqNlpLWVBPNEFxWGZDaFAr
+            T1c4VWJva1pCekh2bVIwWXdTR0hiR1UKG5BqOJ6xProRSF17O8wHLABP4Ku59jEG
+            xJtLhklhkRhyk7hgypqHYW1mpQPdmhc4qSu3ANFo0B2aZBs+5LFmig==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:Zr87QFWN7olVxhfGgi8GjEN9uPHNm1bvpEJvvMFlGJJnOGH2kGkEX6kY2D/SzqolSAJa9L+6tBZ6eI8zlKGuWTcRVLPPw769ZqWcHjmGeCWJziEem5Q9d5dpuTKK9hrfa6kL2iHPgkTUtWbvGgToc+dLuzgMcqrZXN6c/oKmkbQ=,iv:oBf6aOF8CTcvChGc/QC1+I8u+yRks3p7207LEKiMYKY=,tag:aPGsL+9pit8mPASfUQH5WQ==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:0THcFo0oJkgnQuc3uPIZ/E+SPBH9KD48zGblIIYlLIMbZ3BCpuDRC5dYVEZiSb4Qp2UfWR9HyHFTOiZ0EortJOxNo42IX5zQoMECwrSuawyScw8Zjove/D7OCM3HYGjfPx4HYRa33nUPUYZFAdJK3YpXI0Kw5gTIvFX9CE+wvIU=,iv:r7er9VAvCOUGGCqhDct3VfxSvdtEb2q5adFN1E6UKls=,tag:dhG/Yg+IEJ5foXZXoaEXig==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
