--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:YD+wfXQc,iv:kl53tmtQwHI5/42XBpLWLbMgjGm42pGfKvUm9yFaLlM=,tag:WbqBe8DjtVp+5sPiddcNbQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:FnQryL/h,iv:rDfYEiqkBSWddDeu/NqNyj8f4qw/Jdobe64h45zVrDU=,tag:sx/SReT04DwKhrVPYpy4HQ==,type:str]
+kind: ENC[AES256_GCM,data:bST/LxZS,iv:V0Y4Qz9ukuYngFss9wA/+MbXLsXP+qSQaLTDAXLedl4=,tag:Z8RHyLZ1KNNBmT04xDvxUg==,type:str]
+ansible_user: ENC[AES256_GCM,data:hfO7G6p3,iv:Mdbyb05QfjYOhozlYbshqGOnIsU4T8oG1mwtb4H43Mo=,tag:VzgMnAdCPFiWQRzPXMAlYQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRRFhSK0hCcWRFcEJ0V0VB
-            cExDNzd0Z3Ard3ZmRkh5M3pnOE1lb093dVZrCjlYWGpUclNpUVZrODllWDR1azA1
-            aGpDYWRvdTFMUVU4NStJVVZwQm9xZEEKLS0tIFV0ZTlpV2JrbU1QNlI0c0orM0h3
-            Tmc5ajVUMVlBUk1SU0paUnNqU0xPRjgKtcQgf/+LzHjWvSY2yGKiF1Wc/RtxEWxB
-            Bg9mMpOWqW4WhNGiSajbrha4BI6C2UpaaaKbXHIwtIf35jq0mmyTGA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2VVEwdC9lNzA1UnptaW11
+            SEpHay81YkRFcnBNU0pVSHB5OW52a012T3lJCjZvYzV3L0dtT3RlODhqYW4xR0pJ
+            d0dYeC9HNW9GWCtkTkZ5T080OXhGaUEKLS0tIDFiZ0xoK3gwVjNkY1ZIbEI2dlNm
+            QjNmUWdJUzBxb2x3MHlhclo2TTJWeHcKP2DyN1HzRLPbtVBLC2JSWVLYhrOrv5kg
+            fg/EBWItAf1vzO6EoeIy2zVFtnzF95ycHDzhjk6fXRxAGfnW1GhOrg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:FZ36/pwVmb29bZ8ejCJb/0CxujZSSHq4yXOWO4JEerSW0EEjLj2wSHkQaRWddw0srfO1QkGgfyBoQq6RDnJel1lwDIe4HR3elkqVJ1vExIts363Wwj6QAF8pmBBBwRlfsTbwolwaxeVVf60VFWtfH/t8o49AIee2asGprCXqiaE=,iv:KaRvXKq1Q3jL8D+qekg8DrNq40CWV8HLxLb6dGETla0=,tag:tlpD7Mpy6ADSSGcttQqYkQ==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:Ocx7y/UI3X9WFaOIVWM69boaJeqxLaW3cKIpabJDXX+Fxh3QY8tFTlQiNAZA2NhJ3PjfMMEzCTCO3icwvVnih687TQoCpkcGeBeKpuDNUZR2+UyHr7rxHJ5T7dmuoy1HXACXh1PEEFC5ulmYK7JuNInVFb1TEBJRHyH/l+8PFs8=,iv:iAEya1Ka7N8LCuMlhGKnykRcWt+SWw1EEWMIOsSouJk=,tag:Ns0GeH5w1CRu/8SmbGIcxg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
