--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:dZLm1oR/,iv:DNd4mgZMgdhQkLidk/hN3IkqvbKG6Q3JCEW9Ch1xit8=,tag:/gLZtHBIhYtiVp3Xqecqbw==,type:str]
-ansible_user: ENC[AES256_GCM,data:Rtpt2vzk,iv:RS8HgvqR56GcoVDZP9WOMDDu2h+RHWpReMPqBh1Pzyw=,tag:Bwl+LgMNzGxBjHZu1TJjCQ==,type:str]
+kind: ENC[AES256_GCM,data:dxle6Z/5,iv:J5AjK/wINU3ftyLuONMMA/LltPee1ytwTsHAibDTi3s=,tag:qDzR757jfWzaDyLIHyH+3w==,type:str]
+ansible_user: ENC[AES256_GCM,data:G1i15dzE,iv:Ag+cChXL6cemAHC152UIvdZnEvrlv9jFd/I3nJEzd98=,tag:c+yzLKJmwB0qH1PpqwlN+g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvSitYcWU4eTl0QjU4NVRt
-            VGhsMXYwQ1I4c09pcithRE1kYzBjMXUycUVNCkFUVDBFdnFFc1dPVFYyKzJxSzJJ
-            bkdKMWczbmJKeXoxdHhSUkU0eitpdlUKLS0tIGZxNTRySGVSQXdRYnN0VmZkM2FL
-            WGdLb3VVYytjZHpZSk5EQmp5ZHlGMVEKaZXF9iN+97rlIDdudaOwkiaVpoABVBVz
-            yyG0F3z37ji5/z7TncaIs/2Vy0deLpDzPpMhTW3J37WxvZmjYbUimg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuOFYrUXFkUHVHNjFmTkJY
+            d3QySk5ZaEEwUXZheWxqaUFBazdmVjJyR1RzClp6cW4xblBzRjdQSEFnSWV5ZjY4
+            N25XaXZIVXR0UHVEcVZ4VnUrY1ZZQWsKLS0tIG1LSHk5UWU1OEV0RGlRMGZYUFZv
+            TmdwY1Y3MU1veVJ2c0g3ZS95R0VyVjAKvgkPjlyQGKxc9gbvRXzhfvlumyrJYc9m
+            jJxkYpkmCHQ4lJKgHdznfoi5DCOCCz3qNQBi8Ff+VLaRgB+sPf7oFQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:q4AZ8tmY+5a06kpzPLwxoIQzCxn2pyi5ifQtGFPdBQifMyn6gkGIaG+1F3n7QGFtGmW2cXR7Shiwh7cwTxxYsnkHRUxX/kD2JbNbhVpXUIDGJ050bCoWqWIo4tm3O26Bvmx9IM68kUzIRm9s0e4haZsmHt2vl7IkbJy0Q33aHJo=,iv:P/iIhn2tTa786yOsoaCcm1xd82UWFWaoiIqXh+i2Tj0=,tag:eII+L2JcEroqYzTjP+63gA==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:rKkq/z0SeZmBjdMMGoyUHcFVYrd7HpCNVBs/btVhxIHlM0AXTcd5c9RxMZyoSwprjVHK6rNwcZZTpzfi8ZekwuYB4jGLulNQ7PVTnQENLcNsu/LsmpKVvDxz1P3jWxWdawFo1kgE3+Acw9Ukym8/BQcetw4WWgZjfpmZYF6NWyw=,iv:EA3R8ElE8AQ8tFvNIy6RBBbGOQzN1x8BaYmYBhQf7C0=,tag:puRmNa3jXa1RCrE4Sdk27w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
