--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Lneq7qtbbOi8oCKHgtKIIZxDplFj,iv:FbM7CJuH3wBMwMgGC26QTodk5q0B1pzaqUki/s6Z4Fk=,tag:7KjC4DpLYeiuASDlQtdQcw==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:HPHE7zODlk8jEIzl5cmTzV6j5CxiWkYC13Z6uGhaeThGkoqAOw==,iv:8+S3vw3x4L/WWfDuR78OKRqh3j15srOoC88UzItrFtU=,tag:QSUQ/uPgCLvoWX816cTNfQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:k4yH3eniFs3oL40=,iv:deQhvVSydCJ1yIz4zLYizjsAfmriHSda+LWfghq1eEc=,tag:BZH3xXXmw3gH0kZOHon/HA==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Q02t8TK+hZRWsePxLLMyIbkBlZL6,iv:Qub74GTNDToCcc3LTLxPKWcAb+e+nqJ/oBhESraZ9wk=,tag:L4lZl8REPpdXdvJn2xEMCA==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:yZw5WVg1F0T8T9k0rOC8eGaMws7+GjT3hfjX+Ze2mJQcH94+JA==,iv:cPSUYWlh+6jKgDr95N9oA/p1/Et9FKIKxZr8yaX9T3U=,tag:9ZyEG2QBveL/jkptqgZoOw==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:/d7cx05AFHFGR5U=,iv:ZKttpAAZIAPvnFMwccIUvCu/I+L9Ht6Y1f/wZyP4FN0=,tag:U7XdugyGVjuRSpkPTxKrRQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzVEdLa0E5Q1V6T0d6RlZj
-            eFByOHlTenl3NHRyMm5kcllWSHJNYW5kbVhvCkwwZmlobGZrNlRGM245bVhGMDZ5
-            TC9uVi9lYW80QWRsYS9ZRWtoZDR1eDQKLS0tIHNRVVhrODZqRjR2OFgzUnFCVStB
-            L0V0bDJDamZCeTVHRldNS1FhZWNRMTQK2KLzDl8R78rM4sKKSCIv7jCcLR0Vj3VS
-            nLaI9ElHfT3QolTdjY5MDgBf9aru5jZuaGvJLsJ1N4YisN7o7+Xr5g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0Zm9yaUE1elU0bGQ3S1o4
+            T3o5d3dCQlhDb29Bc3JRbXdNdlNSc1YvbDNrClhFNTZBZUYxN090Rkoyd3hqK2xY
+            Nm0yTS82WThTNXZGUHprRC8yZ05ZaDgKLS0tICtJS3QwZ0FaUWVwT1FzemlJTCsz
+            TlZWYkFOaHk4YXNvT01kWTk1cHdwNVkKKPVeV1UMO13A0T9p61/UJrspZjaRS98G
+            LGxJF/5M9AcufbLzElsJXjSJxC07w3sYpv7+DuApwRZERsscVLFgiQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:PmBRJbQKYMzEiCgBqjbKH1702pcUt2iYZzj8XDW8frmGFTdkCjBxWvDcMYZrHgE7+epzpv/e7bGv+TRoGQkWVm6MnO1E9RkRefCX4SWvNH2Ghk86+al4twIuLuAtWkZDPmxyUhrCUYJpIxfs7VWTx6BNP0FF5iByjTRtZN5N33s=,iv:b7iIONQUckxtZlvN5mBi+9XXdOynFN4Pj3WmMXJD6ZI=,tag:TvyUhQqKNNAze14v0SSyyg==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:LlsqRUmaQEdiwM4w7a8JWTp77gEJcUEGopPaYMP9qBa8pw/EDqa+8vOpDrBUhacm6ZSIu2kl63qycpE0O60n3bQtQgd4WSSkuvRsKPfIUiWl/rdHzxmNLQOfVdFNJIAKVGq4xFkfGjpL08g6SuhNAeTNpDe3/5LDtc7prDbHvoA=,iv:4u3pazeWITCgKl1Prmb1AOEBcsAdXf+14HkdSGz/98s=,tag:SpOEEce/O1e+UGIVriTIMw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
