--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,34 +4,34 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:o3F2a77vyL9JN3M=,iv:Myc6LahnTDk4NbaHdaw3lX41jHPuL9lde5nooMmPG60=,tag:QOweBsh8QjgmNg+udkoA2Q==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:NdHbc9PaWqt+K/HCD2tiECpl8IYq,iv:ZFLiIvXa9rm32B8Ge5UAhwl4+eOZNjRsVARb2KQI+H0=,tag:DnhR/ge/UmRviYPDVNgQyw==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:HrOVLZaTHWElHCJKEzjz5HfmZsN8fCqTPw2cho2YzTCOCRW3jSIbfHvX71j+JrBvndRTiJkUdSKUUaIXJFid1n3YpZWZGo8=,iv:ycOfQb/4cKBgXt5XtC57pZfEu750cO8VWFoxsgqlh0I=,tag:/RtCKsSHuBnuZmvObpyFhA==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:zI2AMJtzbUp5RZu81DzMCGyQ2+kmdY4qfLiZYByV7qLcUnc=,iv:E43NJViqHKS65lDU/+jnaEGe+AwrsV9NHwQrO6SpBE4=,tag:h7VpCrd/9uaFRcCV2f5UiA==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:0K7Gxzq8nU9LxRm/LHI729PEBQ==,iv:SgOudCIdtHf5VrK+EucGuLW5TYs01Bu7QJr8KONq2qw=,tag:F0VymXmtp/hDLeBdRB3GVA==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:Ik584Nd031+QGWPwuOkmrlM1CL4A,iv:4VkrlOXbdizVy2VnCKwuGMXTNxsjFV0Hb11r/ZqMEcc=,tag:lJEv+6sEZPokVWR14dXbLg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:1GcKUFwFlr4=,iv:ddGEA0c3EFwAg83CRvQIS/EE17md93uSISXkrIhTX+I=,tag:GWK8UjqrRKGs+16Olwvbrg==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:d5L8gplpOrU=,iv:wIhDbo2jbrzzh+Y0lW+w+UhEfgHHv7d+if6tE85cuGE=,tag:sylrsoV4nTm/Z5uHguGiOg==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:4ni2mzYmyBIaeJMFP2bxxScJq5ijVzFFKmSWfB8rfJch8XALIdZG/T+POPlXufIrBINP35n+z7/hYFrKrXXgAA==,iv:WDoDJYikRshRw5PfADSXfe5fxfh8sOMXG/jjoo2utvk=,tag:209gZ+AjCTCDcP5Z799BjA==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:gYNrTTHO4Xe8t2M9zx5rn2399nNKWXJwFfd+zo6zjIJozb5onEEsr7oye0r0p/vI8KaPZk6kWHN59uZHy11Q+g==,iv:lJlYmLS/1M2ouAv34znqBHVzsbahF1sOiR9urenv9As=,tag:qZwCR8IgbW/fAYQ7cbF/eQ==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:pNj3uXLG7TV3,iv:glyjIb6Hxu40d6pjTZoK+79swOxMKeNIbaCeyxvGXEU=,tag:ibO1bw7R3xRWw58kjGWtqQ==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:t6kW+Ls0oMYN7eRBQImY,iv:MTGtg3PEWd8ieqYXFd9uS1c3wUUONxWiOWs3uPylBtg=,tag:d9WVIxB3WhrZpSfgSqs4Gw==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:i0dK+8kVAPsmtMoLx38DlwMqY8flgGyfrXIiyVN2+ZyQl0WHoGeK3S1MjHdTBbsp+lM=,iv:Vcrb1dmScQiUSU96uefoErFtfoXomf/pDddHZX0Gn3s=,tag:6DV6RvtjIYmbdzB7Kqk9JQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:C6LLgi8mIjRzgx/VkQ0=,iv:AENO+BMGBoPjpbdg7KkIVxClUMbM+uOIe0nuzpr8gIs=,tag:8zBEEGLEJ9zpXP/xFTA84A==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:wPEfpqEVGR5Bz0oIqwR7CUZlnyI=,iv:c6Hs++Tz7CFUQ3XcxHFKFYiRpdR6rv9HOwgzTsEnzQ8=,tag:jPl75bwEkqqu5dAoDGFu4Q==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:PC4anKENMcA=,iv:0m6SplFPhxRHSPOSP35gxEcnOuo50IoztYX1tw6Hihc=,tag:FfQPeFqOToK94fXSTKMnCQ==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:jq6QJd4za9Y7rFnCrbJXpjFe252RwryrLX2gSPsJU1x1YrGaFA==,iv:CunM7TkpMfrQF70hSfnDRs2DZxqRjKuSvuCfh54VDgE=,tag:kXVOXvCfJDeob6g78itx/w==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:NgZ4K8VX0PMS,iv:QqRHgTY7LjXQWcasF6C5xIi0El2x33ZJGmHUuOnpvlI=,tag:2XngaTLWlXpCDsz1PJBNUw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:EhkE3khlzUhd,iv:jNnYJiyfsT8iJct2Z3SFK/jSzKAv7j7MRWGT09WunoM=,tag:b0MRAzyuHEyAWafpXPjY2A==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:J8B7DjwxUA==,iv:eBuBiOpFcwa6q7Dq9ELIbDMSNxNzsoVfsz+AnoSBVCE=,tag:rxMcPP3aYzEshiZNxG2bhw==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:UF8utsExdqyQ,iv:nPtHorvW7Pya/lmXZJw62X9Ybmak59EMJ9hr/45DOHY=,tag:dN41iKAg3ynePVREG80yGw==,type:str]
-    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:uOSuWYGvCgEO039qboDThe64,iv:przLA7aLopfQBAwOeKWaZwr+RHuw0LoI/dWwhBAkf6E=,tag:AM1dlxOak468syFAk/j8fw==,type:str]
-    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:eudcczkUfv3Aiy1jMcxR9+s4Yg==,iv:bAGKnS8HoGRzpl+IQJG99lhrVXABuavwx1qmHorz2p4=,tag:lA4bmy+Is6AYnaG9gYbuMw==,type:str]
-    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:zTm0yoYJo/M=,iv:mVPK8M9I5s2GNoqiEO3gx9D7OJGoeW651mjkNAkIIS0=,tag:eHGCY6zxQ1F5iH3oC8IxLw==,type:str]
-    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:jE1DR5WonZnOCQPs19UIe0zXVg==,iv:5wz5ehlwzc+hzKQDq5otsCULhv5h4hwP9xRgB+XUiL8=,tag:gf0kGFrInduUuoDizscbOQ==,type:str]
-    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:FSeL8aeah89F,iv:aiDmUCrRPsM1fIvK52mVvoEtxIO9TaxbE3aCEWpX6EE=,tag:N4/QYWKrq0rYF46n+WjCSA==,type:str]
-    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:X/RBtSO2VkhPwg==,iv:VpAEH6bD4xC59UJrZc2pMP4cq1A4o3qYm08fu0kLAKY=,tag:D6EYh0bGI+6mhvBf+1W0Dg==,type:str]
-    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:vV8UjI1Xr/mUXw==,iv:pZCJ+3RgGiV7M9vDQXrV46T5l20pkNC009zZe1GJTpI=,tag:TvtNkkHJpHk/YP9GozByAA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:Iwy4//rIzQmxUyg=,iv:EwhIczU2Uc+m8EsLdsXQW/9RQ8WJpET/NRjbR4BCLxU=,tag:Ib2q4NJzd35fgH6ClAkUmQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:CaRFaALyZVAHYLKrzuXZogaa0qpQ,iv:RjMtDXGyDmPDAPH2QGWfZLQiRmwiBpruXqqgxHPEMws=,tag:T64g0GP9DTb2XNbdHwhI8g==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:2xd9EOI1D9BFJU81i8opwfK9fSIo7e4U96QBBlnMryo2vcN1uZYIBEPglbK+4v+eRSkoc/W2Z+4wrx0r2J0K1XWvHogX7hs=,iv:E7MYBBZnmoRzzJxFVmwKY1OdT37sWAnmhXLTzTdDruc=,tag:TeLIVdTKMOyC5e7DDU/rOQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:b8kBy7xJk6P0HLQ4sQcYkHqU2Olweo+8XfHlVaY7hZfv9Oo=,iv:HTK3ZLkR8OsAAVyf7f9iI0Axfajn0lWw7BUcn0jaBcY=,tag:wYQiVZLYzRdUgPVwq2kEFQ==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:EF4pnqUrlDvibRa0oCxTft6z0w==,iv:zt05Yc83GSJxcNvuFPQxguiL/R51/9ChW7GlRD52O38=,tag:H4rJ5FATyWkxIDluVlwEvQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:zwfvdDUMITXB3Z+JFnTK6vo4lxAJ,iv:43KWRrUQLy7bkyQw47d2gBk73tfx4xaOZ7N2XpA1Vok=,tag:nvBT4rsGxRulq/Y5PvIZ4g==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:BEk/xE8ass0=,iv:69Lle3mAoOXig55RpuPdU0JduSXvtrq7HBtk6tZrqV8=,tag:j+mtnmF/p0vJ76lkn9Mr+w==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:gnRqyr9J84g=,iv:0WCuCAhLrhcymuUt0vaejw5cUWIhZysn9isVnIiTsZY=,tag:ylLJEwZofTKKq/wKCZRcGQ==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:dxFPA4tPY54P6GAoINlRpbhRC2rlsa7vaYZtJniDwS4BKYQ2BprZqHYbI17LbqyYj5PtLhXLwhNQ8cOyWqcBzg==,iv:skhSIVPU2b7rDQZCGo+pLmzwft+jwHl9MVHUhwt15Ic=,tag:PjwB/cQ5Z20lRS3S/Uex8A==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:A3eMOZAvFvvgiXhxQLa4K/QEULpkU/HR76zVPWGmYrSa2ZMHkfF2/dDipY0bVcAoXfycM6CVUYar8kzuMELmbw==,iv:M7Sab92HV4/CMdXcWpdjjwMTBh0buPHCoMkqn1UqZwM=,tag:K246lDADAFsRVK9EabkqrQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:5xVUdy9qrwDI,iv:a43e/IpKVY1IB1Fk5JzDPeS6uySmvRwZeH7DppRE/H8=,tag:6CnS1Zgn9FwUtPD1az7Bfg==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:idXCVpLi4NAJ8pOmfIhg,iv:Rrka1do6PHYNX5ULXP87cO2G7DW0i2ksvB8D1piv0FE=,tag:r4n0SLXNGXjzgn5r+PrqHA==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:Odcy15E2Qmg3qFEcVrZMng8P9flBnNHop5iMjqKADGG+HS4xyUu5MksslOHl5vkqAhA=,iv:eYOm4oiGjfssZEhB+LdqYXlkiH/5eLOPmdjI3Jjcp3w=,tag:SZ+TAHkbIYFfX0xqXBdm2w==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:icEvqhynByqqVLYHyJA=,iv:m4E9pfWOTInY1/J+0x6jd1E0XvEnQ1Kh13MiW1A0DS8=,tag:0HAIAQ3bTrZrF12P0Nqb7g==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:E60aapuDqXx2CfiQaxhAUzsbTuI=,iv:ufl/JzQFxnqS3CcKQo4P+QItvQwWooqxLQ3/0cy8090=,tag:S1KRJgFvg36/4WbVm/mdZg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:KR5GWlW1lxM=,iv:zj6tcdIyhMWPw6IBx/qu8AWCsak+/2Rb7kDAjXpJCJc=,tag:HVF8IQ8ygjCpvxa6nBkXKA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:GOLKo+EhXkJqc6Lc1r8+dG9wyOj0lOS2B2CltG+wkzOuIPZjvw==,iv:ksOGYjQqLYMJ2Uv0FtBjPcpQJ4O58/0Ym/XK1E3wVPU=,tag:905VKPDrpymSmwlmFFM7og==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:CjKUUtV5B0Jx,iv:dJqM1lqjJ8JzAxWoG4f5DsU1J1IqKd0hBt/xH1vWxNA=,tag:olnbadvc3uZbBGm4W8iBTw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:WFop61u/7Kvk,iv:v9knP0ZNtS3n6vAL3g/8j927EkMypT/80Qe9ptpACUk=,tag:+BcrAlNJ9OT7j9SLrewW8Q==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:TCtVcsLXfw==,iv:mnlpqV82HMRmwZHhe9dxaA3pK8bII25fU9lpIaTHzhY=,tag:Day8De3T8iAcezUnYXnkGQ==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:Z3RdgxKk9TFA,iv:Fc5P64yDoBYU04LBH5H9c/+aNfOr/XloZHyNeoRFigU=,tag:3IZVVTH7sNa3jURdMADJNQ==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:Yagylc6WIwbRn6m7hrUv7zND,iv:nyfej8ZS7RWnSCDskUdEPRbgLvqi6hLpV0OB1ZHVixc=,tag:sCerl0e0d7mqvmTrGjoeNA==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:Lf4iewxGaJ3Si/BY7MXnPbAv3w==,iv:KzezmHDdtdqw9c2vtd1ckCajKCzcZTqTlaQbrV8RP9g=,tag:F5cfr62IUpdgaaLiJQycMg==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:75X4woslZ6g=,iv:WWY1spAbe3pPOkKCnt3tssfKlinsVpEypL2PwdoK6wM=,tag:U4uFPpuTSbQ21era5skpTg==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:im0wQz/y34wkrcMt9ikielI+iw==,iv:mAOG8BTIFWc4Q18G9XYqYVQIeh/+YqwC9C0WMhMItwg=,tag:KM0JfXaByVueJWjQ01sSIg==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:VPR+6PXV/0ma,iv:5aUxYnhlgcWU3w2denQdqphD4d8yGQJRRaPJDUue5MU=,tag:pAck/7aGQIqAfVkZLxmrQw==,type:str]
+    SECRET_MINIO_USERNAME: ENC[AES256_GCM,data:0CSpyuCwTEkcOw==,iv:8I1U3CrUR+Eo1Jby+HXecHw1ofP1jGiDg32GwhJMS4I=,tag:B7g2mH/vC2nmInrA4+DeyA==,type:str]
+    SECRET_MINIO_PASSWORD: ENC[AES256_GCM,data:xpMHa93uyuJRYA==,iv:D0o2GnP/hn6SBXvkciiEaedV0mIdtSfdIW4MQWSSqso=,tag:0F+8JjE4Zz+q8/8sE4HUuw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -41,14 +41,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmWlBwYTNjdWt6TkpUK25p
-            L2ZGUGYwcXp6RE5ubDRrbDhmZUk2WlpxMmtRCmc1U0FzTm9HRTg4MzdnN2J4dkhh
-            aHlaLzh6MGUyVUozYUpRS2NOZGhmY1kKLS0tIGJzWlVvVm5oMFl0MGRadU9oajJC
-            RG1GbjlLMjBGNUUxVTJ2VXZ3WENDdHcKb995/F3NIxh8cvGi9lm2/+P7isfAawV1
-            3k1uX8jbve1jYEGIH/J9OPKpIJpIYxTDlAwv9c9C3V10jAgMsNGLKw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwVFRtTmFMVHErMDhzT29K
+            dTBPVEl2YnNjaHFWRllraVdmcmI3YVc0dWlNCjZ0ZkxZTzArNW5NdHhLQmxWWnFh
+            N3BnakhNRXpRb2JpK242L2NKMU1RelkKLS0tIEpyc3hZcmVGSUd5aHpoVU1vU3pu
+            bU9UdUJBd3hEZ2h0eEd0dHJOWWlOR0EKtzfIHzzm5ZLMCQTeVfJvuYBwPCMOmq8a
+            zYz1Rgh7rBy2cq6lCcLVBSD3WHmjTxZwMiXNPzbyQD3XWM6nMBzigA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-03-05T23:12:33Z"
-    mac: ENC[AES256_GCM,data:sjKVMbqjfFxO/ZEb0gctVaiCWlVS+2DTxbl8fnstXtK177+7xSxHRzMh7mZDe3aLLmUYPAf3hw0T/0w/66faNwIA4lZdgACo13OtI0nJAi3zkuyOHXo0+3bEpuegpo1pfl9Tm4YUJJDTnBoE37HKJCPQOEsw162pTYykcBzRBP4=,iv:o2ak5nVwCJMOSNokovYGqY9xQli/fV51bE/Wsj5d0vI=,tag:9SBkwQGdf+7aseUwDxPK1A==,type:str]
+    lastmodified: "2023-03-16T03:36:47Z"
+    mac: ENC[AES256_GCM,data:cZOVSjLVrdI5y7pHbmqkv2awj+D3O9pO/ChIjfFF7QLBxRuhrVR64kkO9Ff5y+b3HuNSigEsB6sWS0pDAqwQ0RqEYKwssB256k03xLHhqChhhyK8qIunp2oaDn12zGXx4KWALQzL1HxB+aFSrgDBLsv6I/LPBeHRx1HjmCevWss=,iv:KopzYDIxYUQEeUcOw7x7tfH2V79QXmBVAxDv6p6SQV0=,tag:W6LqxpnQaLA/bn0oM6C4LQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
